# unison

./: .travis.yml  LICENSE.md  README.md
src/unison/: LICENSE  unison.cabal
src/unison/exec/uni/: Main.hs
src/unison/scripts/: pack-hexagon.hs
src/unison/src/: MachineIR.hs  Unison.hs
src/unison/src/Common/: Util.hs
src/unison/src/MachineIR/: Base.hs  Constructors.hs  Instances.hs  Parser.hs  Predicates.hs  Util.hs
src/unison/src/MachineIR/Transformations/: AddImplicitRegs.hs  DropExplicitFallthroughs.hs  DropUnsupportedPseudos.hs  LiftBlockFreqs.hs  LiftCustomProperties.hs  LiftJumpTables.hs  MergeBlocks.hs  PrepareForEmission.hs  RemoveEmptyBlocks.hs  RenameMachineBlocks.hs  RunPostProcess.hs  RunPreProcess.hs  SimplifyFallthroughs.hs  SplitTerminators.hs
src/unison/src/Unison/: Base.hs  Constructors.hs  Driver.hs  Instances.hs  Parser.hs  Predicates.hs  Target.hs  Util.hs
src/unison/src/Unison/Analysis/: BoundaryTemporaries.hs  CallingConvention.hs  CopyRelated.hs  FrameOffsets.hs  FrequencyEstimation.hs  MakespanBounds.hs  Stalls.hs  TemporaryType.hs  TransitiveOperations.hs
src/unison/src/Unison/Construction/: AddDelimiters.hs  BuildFunction.hs  LiftGoal.hs
src/unison/src/Unison/Graphs/: BCFG.hs  CG.hs  DG.hs  DT.hs  Hoopl.hs  ICFG.hs  OG.hs  PG.hs  Partition.hs  SG.hs  ThirdParty.hs  Util.hs
src/unison/src/Unison/Test/: Driver.hs  Invariants.hs
src/unison/src/Unison/Tools/: Analyze.hs  Augment.hs  Count.hs  Export.hs  Extend.hs  Import.hs  Legalize.hs  Linearize.hs  Lint.hs  Model.hs  Normalize.hs  Plot.hs  Run.hs  Uni.hs  UniArgs.hs
src/unison/src/Unison/Transformations/: AddPragmas.hs  CleanPragmas.hs  EstimateFrequency.hs  FinalizeOperations.hs  FoldReservedRegisters.hs  NormalizeFrequency.hs  PostponeBranches.hs  PropagatePhiCongruences.hs  PropagatePhis.hs  RenameBlocks.hs  RenameMOperands.hs  RenameOperations.hs  RenameTemps.hs  ReorderInstructions.hs  RunTargetTransforms.hs  SortGlobalTemps.hs  UnbundleSingletons.hs
src/unison/test/: Main.hs
src/unison/test/ARM/size/: gcc.alias.get_frame_alias_set.asm  gcc.alias.get_frame_alias_set.dump  gcc.alias.get_frame_alias_set.mir  gcc.c-decl.pushdecl_top_level.asm  gcc.c-decl.pushdecl_top_level.mir  gcc.expmed.ceil_log2.asm  gcc.expmed.ceil_log2.ll  gcc.expmed.ceil_log2.mir  gcc.insn-output.output_51.asm  gcc.insn-output.output_51.dump  gcc.insn-output.output_51.mir  gcc.jump.unsigned_condition.ll  gcc.jump.unsigned_condition.mir  gcc.rtlanal.insn_dependent_p_1.mir  gcc.rtlanal.parms_set.asm  gcc.rtlanal.parms_set.ll  gcc.rtlanal.parms_set.mir  gcc.varasm.data_section.mir  gcc.xexit.xexit.asm  gcc.xexit.xexit.asm.mir  gcc.xexit.xexit.dump  gcc.xexit.xexit.mir  gcc.xexit.xexit.stats  gobmk.barriers.autohelperbarrierspat145.mir  gobmk.board.get_last_player.asm  gobmk.board.get_last_player.asm.mir  gobmk.board.get_last_player.mir  gobmk.board.get_last_player.stats  gobmk.interface.init_gnugo.ll  gobmk.interface.init_gnugo.mir  gobmk.owl_attackpat.autohelperowl_attackpat68.asm  gobmk.owl_attackpat.autohelperowl_attackpat68.dump  gobmk.owl_attackpat.autohelperowl_attackpat68.mir  gobmk.owl_defendpat.autohelperowl_defendpat421.asm  gobmk.owl_defendpat.autohelperowl_defendpat421.asm.mir  gobmk.owl_defendpat.autohelperowl_defendpat421.mir  gobmk.owl_defendpat.autohelperowl_defendpat421.stats  gobmk.owl_vital_apat.autohelperowl_vital_apat34.asm  gobmk.owl_vital_apat.autohelperowl_vital_apat34.ll  gobmk.owl_vital_apat.autohelperowl_vital_apat34.mir  (+29 more)
src/unison/test/ARM/speed/: gcc.alias.get_frame_alias_set.ll  gcc.c-decl.pushdecl_top_level.mir  gcc.c-decl.pushdecl_top_level.stats  gcc.expmed.ceil_log2.asm  gcc.expmed.ceil_log2.asm.mir  gcc.expmed.ceil_log2.dump  gcc.expmed.ceil_log2.mir  gcc.insn-output.output_51.ll  gcc.insn-output.output_51.mir  gcc.insn-output.output_51.stats  gcc.jump.unsigned_condition.stats  gcc.rtlanal.parms_set.asm  gcc.rtlanal.parms_set.asm.mir  gcc.rtlanal.parms_set.mir  gcc.varasm.data_section.asm  gcc.xexit.xexit.ll  gcc.xexit.xexit.mir  gobmk.barriers.autohelperbarrierspat145.asm  gobmk.board.get_last_player.ll  gobmk.board.get_last_player.mir  gobmk.interface.init_gnugo.asm  gobmk.owl_attackpat.autohelperowl_attackpat68.asm  gobmk.owl_attackpat.autohelperowl_attackpat68.asm.mir  gobmk.owl_attackpat.autohelperowl_attackpat68.mir  gobmk.owl_defendpat.autohelperowl_defendpat421.mir  gobmk.owl_vital_apat.autohelperowl_vital_apat34.asm  gobmk.owl_vital_apat.autohelperowl_vital_apat34.asm.mir  gobmk.patterns.autohelperpat1088.asm  gobmk.patterns.autohelperpat1088.mir  gobmk.patterns.autohelperpat301.asm  gobmk.patterns.autohelperpat301.asm.mir  h264ref.memalloc.no_mem_exit.asm.mir  h264ref.sei.UpdateRandomAccess.dump  h264ref.sei.UpdateRandomAccess.ll  h264ref.vlc.symbol2uvlc.dump  h264ref.vlc.symbol2uvlc.mir  h264ref.vlc.symbol2uvlc.stats  hmmer.tophits.AllocFancyAli.asm  hmmer.tophits.AllocFancyAli.asm.mir  mesa.api.glIndexd.asm  (+7 more)
src/unison/test/Hexagon/size/: gcc.alias.get_frame_alias_set.mir  gcc.c-decl.pushdecl_top_level.asm  gcc.expmed.ceil_log2.dump  gcc.expmed.ceil_log2.stats  gcc.insn-output.output_51.asm.mir  gcc.insn-output.output_51.mir  gcc.insn-output.output_51.stats  gcc.jump.unsigned_condition.dump  gcc.jump.unsigned_condition.mir  gcc.rtlanal.insn_dependent_p_1.asm  gcc.rtlanal.insn_dependent_p_1.ll  gcc.rtlanal.insn_dependent_p_1.mir  gcc.rtlanal.parms_set.mir  gcc.rtlanal.parms_set.stats  gcc.varasm.data_section.mir  gcc.xexit.xexit.asm.mir  gcc.xexit.xexit.ll  gcc.xexit.xexit.stats  gobmk.barriers.autohelperbarrierspat145.mir  gobmk.barriers.autohelperbarrierspat145.stats  gobmk.board.get_last_player.mir  gobmk.interface.init_gnugo.mir  gobmk.owl_defendpat.autohelperowl_defendpat421.asm  gobmk.owl_defendpat.autohelperowl_defendpat421.mir  gobmk.owl_vital_apat.autohelperowl_vital_apat34.mir  gobmk.patterns.autohelperpat1088.ll  gobmk.patterns.autohelperpat1088.stats  gobmk.patterns.autohelperpat301.stats  h264ref.memalloc.no_mem_exit.ll  h264ref.memalloc.no_mem_exit.stats  h264ref.sei.UpdateRandomAccess.dump  mesa.api.glIndexd.dump  (+10 more)
src/unison/utils/: unison-mode.el
(+1701 files in other folders)
